# Astro-Orbit-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  cd.yml  ci.yml  release.yml
benches/: crypto.rs  repository.rs
docs/ADR/: 0001-use-axum.md  0002-use-sqlx.md  template.md
migrations/: 001_initial.sql  002_auth_identity.sql
scripts/: init_db.sh  migrate.sh  reset_dev.sh  seed.sh
src/: lib.rs  main.rs
src/auth/: challenge.rs  context.rs  jwt.rs  mod.rs  session.rs  wallet.rs
src/cache/: client.rs  mod.rs  rate_limiter.rs  session_store.rs
src/config/: mod.rs  tests.rs
src/database/: mod.rs
src/deployment/: mod.rs  pipeline.rs  state.rs  validator.rs
src/dto/: api_key.rs  auth.rs  contract.rs  deployment.rs  mod.rs  notification.rs  org.rs  project.rs  repository.rs  user.rs  wallet.rs
src/errors/: mod.rs
src/events/: bus.rs  mod.rs  types.rs
src/handlers/: admin.rs  analytics.rs  api_keys.rs  auth.rs  contracts.rs  deployments.rs  explorer.rs  health.rs  mod.rs  notifications.rs  orgs.rs  projects.rs  repos.rs  security.rs  users.rs  wallets.rs
src/jobs/: deployment_jobs.rs  mod.rs  notification_jobs.rs  queue.rs  runner.rs  types.rs
src/middleware/: audit.rs  auth.rs  authorization.rs  mod.rs  org_context.rs  request_id.rs  response_meta.rs
src/models/: activity.rs  api_key.rs  audit_log.rs  challenge.rs  contract.rs  deployment.rs  invitation.rs  mod.rs  org.rs  project.rs  repository.rs  user.rs  wallet.rs
src/notifications/: channels.rs  mod.rs  preferences.rs  template.rs
src/permissions/: mod.rs  policy.rs  role.rs
src/repositories/: activity_repo.rs  api_key_repo.rs  audit_repo.rs  challenge_repo.rs  contract_repo.rs  deployment_repo.rs  invitation_repo.rs  mod.rs  org_repo.rs  project_repo.rs  repository_repo.rs  user_repo.rs  wallet_repo.rs
src/response/: mod.rs
src/router/: mod.rs
src/services/: analytics_service.rs  api_key_service.rs  auth_service.rs  contract_service.rs  deployment_service.rs  mod.rs  notification_service.rs  org_service.rs  project_service.rs  repository_service.rs  user_service.rs  wallet_service.rs
src/state/: mod.rs
src/stellar/: client.rs  contract.rs  error.rs  event.rs  mod.rs  registry_client.rs  transaction.rs
src/telemetry/: mod.rs
src/utils/: crypto.rs  mod.rs  pagination.rs  time.rs
src/validation/: environment.rs  mod.rs  slug.rs  stellar.rs
tests/api/: mod.rs
tests/common/: factories.rs  mod.rs  test_app.rs
tests/integration/: mod.rs
tests/unit/: mod.rs
